# vrcmute

./: .gitignore  LICENSE  README.md  pyproject.toml  vrcmute.spec
.github/workflows/: build.yml
src/: __main__.py  logger.py  vrcclient.py  vrcmute.py
